# Quark-2.0

./: .gitignore  Makefile.am  README.md  configure.ac
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/spendfrom/: spendfrom.py
share/: setup.nsi.in
share/qt/: Info.plist.in
share/seeds/: generate-seeds.py  nodes_main.txt  nodes_test.txt
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsseeds.h  clientversion.h  hash.h  init.cpp  main.cpp  masternode-budget.cpp  masternode-payments.cpp  masternode.cpp  masternode.h  masternodeconfig.cpp  masternodeconfig.h  masternodeman.cpp  miner.cpp  net.cpp  pow.h  rpcclient.cpp  rpcdump.cpp  rpcmasternode-budget.cpp  rpcmasternode.cpp  rpcmining.cpp  rpcmisc.cpp  rpcrawtransaction.cpp  rpcserver.cpp  rpcwallet.cpp  spork.cpp  spork.h  timedata.cpp  uint256.h  util.cpp
src/primitives/: block.cpp
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoinaddressvalidator.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  intro.cpp  openuridialog.cpp  paymentserver.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  splashscreen.cpp  transactiondesc.cpp  utilitydialog.cpp  walletmodel.cpp
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_mn.ts  (+20 more)
src/qt/res/: bitcoin-qt-res.rc
src/script/: standard.cpp
